--- a/BigTree.ipynb
+++ b/BigTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import os #for reading files\n",
     "import matplotlib.pyplot as plt \n",
     "import sklearn\n",
+    "import seaborn as sns\n",
     "path = \"./final_nus_datathon_dataset\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Naming Convention:\n",
-      "dfs[\" policy \"] : nus_policy_info_df.parquet\n",
-      "dfs[\" client \"] : nus_client_info_df.parquet\n",
-      "dfs[\" final \"] : sample_final_modelling_df.parquet\n",
-      "dfs[\" agent \"] : nus_agent_info_df.parquet\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './final_nus_datathon_dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m dfs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[0;32m----> 2\u001b[0m files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNaming Convention:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(files)):\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './final_nus_datathon_dataset'"
      ]
     }
    ],
@@ -379,10 +380,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dfs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#removing NAs\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdfs\u001b[49m:\n\u001b[1;32m      3\u001b[0m     rows_before \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(dfs[name])\n\u001b[1;32m      4\u001b[0m     dfs[name] \u001b[38;5;241m=\u001b[39m dfs[name]\u001b[38;5;241m.\u001b[39mdropna() \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dfs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#removing NAs\n",
+    "for name in dfs:\n",
+    "    rows_before = len(dfs[name])\n",
+    "    dfs[name] = dfs[name].dropna() \n",
+    "    rows_after = len(dfs[name])\n",
+    "    print(f\"Dataset '{name}': Before {rows_before} After {rows_after}\")\n",
+    "\n",
+    "print(\"complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#innerjoin on dataset\n",
+    "df_merged = pd.merge(dfs['policy'], dfs['client'], on='secuityno', how='inner')\n",
+    "\n",
+    "df_merged = pd.merge(df_merged, dfs['agent'], on='agntnum', how='inner')\n",
+    "\n",
+    "print(f\"Final merged dataset shape: {df_merged.shape}\")\n",
+    "print(df_merged.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#EDA\n",
+    "### Basic Dataset Overview\n",
+    "# print(\"Dataset Shape:\", df_merged.shape)\n",
+    "# print(\"Column Data Types:\")\n",
+    "# print(df_merged.dtypes)\n",
+    "\n",
+    "### Summary Statistics for Numerical Columns\n",
+    "print(\"Summary Statistics:\")\n",
+    "print(df_merged.describe())\n",
+    "\n",
+    "### Target Variable Analysis (`agntnum` - Financial Advisor)\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "sns.countplot(data=df_merged, x='agntnum', order=df_merged['agntnum'].value_counts().index[:20])  # Top 20 agents\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.title(\"Top 20 Agents Assigned to Policies\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Agent Distribution:\")\n",
+    "print(df_merged['agntnum'].value_counts().head(10))  # Print top 10 agents assigned\n",
+    "\n",
+    "### Customer Demographics Analysis\n",
+    "# Gender distribution\n",
+    "plt.figure(figsize=(6, 4))\n",
+    "sns.countplot(data=df_merged, x='marryd')\n",
+    "plt.title(\"Marital Status Distribution\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Age group distribution\n",
+    "plt.figure(figsize=(6, 4))\n",
+    "sns.countplot(data=df_merged, x='cust_age_at_purchase_grp', order=sorted(df_merged['cust_age_at_purchase_grp'].unique()))\n",
+    "plt.xticks(rotation=45, ha=\"right\") \n",
+    "plt.title(\"Customer Age Group at Policy Purchase\")\n",
+    "plt.xlabel(\"Customer Age Group\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()\n",
+    "\n",
+    "# Race distribution\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "sns.countplot(data=df_merged, x='race_desc_map', order=df_merged['race_desc_map'].value_counts().index)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.title(\"Customer Race Distribution\")\n",
+    "plt.show()\n",
+    "\n",
+    "### Policy Data Analysis\n",
+    "# Product group distribution\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "sns.countplot(data=df_merged, x='product_grp', order=df_merged['product_grp'].value_counts().index)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.title(\"Policy Product Group Distribution\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Customer tenure at policy purchase\n",
+    "plt.figure(figsize=(6, 4))\n",
+    "sns.countplot(data=df_merged, x='cust_tenure_at_purchase_grp', order=sorted(df_merged['cust_tenure_at_purchase_grp'].unique()))\n",
+    "plt.title(\"Customer Tenure at Policy Purchase\")\n",
+    "plt.show()\n",
+    "\n",
+    "### Correlation Heatmap (Numerical Features)\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.heatmap(df_merged.select_dtypes(include=['number']).corr(), annot=True, fmt=\".2f\", cmap=\"coolwarm\")\n",
+    "plt.title(\"Correlation Heatmap\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"EDA Completed\")"
+   ]
   }
  ],
  "metadata": {
@@ -401,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
