Additional copy of BigTree with column investigation for client

--- a/BigTree copy.ipynb
+++ b/BigTree copy.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd \n",
     "import os #for reading files\n",
     "import matplotlib.pyplot as plt \n",
-    "import sklearn\n",
+    "import sklearn.preprocessing import LabelEncoder\n",
     "import seaborn as sns\n",
     "path = \"./final_nus_datathon_dataset\""
    ]
@@ -252,6 +252,13 @@
    "source": [
     "dfs[\"policy\"].head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -761,6 +768,182 @@
     "#should pct cancel for agent should be reversed for customers with high cancel?\n",
     "#high expiry with high expiry? \n",
     "#correlation between age? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>secuityno</th>\n",
+       "      <th>cltsex</th>\n",
+       "      <th>cltdob</th>\n",
+       "      <th>marryd</th>\n",
+       "      <th>race_desc_map</th>\n",
+       "      <th>cltpcode</th>\n",
+       "      <th>household_size</th>\n",
+       "      <th>economic_status</th>\n",
+       "      <th>family_size</th>\n",
+       "      <th>household_size_grp</th>\n",
+       "      <th>family_size_grp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CIN:14264</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1993-02-17</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Chinese</td>\n",
+       "      <td>545686</td>\n",
+       "      <td>1</td>\n",
+       "      <td>76</td>\n",
+       "      <td>56</td>\n",
+       "      <td>HH1_lt40</td>\n",
+       "      <td>FS3_40to60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CIN:7188</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1977-06-15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Chinese</td>\n",
+       "      <td>308364</td>\n",
+       "      <td>72</td>\n",
+       "      <td>96</td>\n",
+       "      <td>90</td>\n",
+       "      <td>HH2_40to80</td>\n",
+       "      <td>FS5_80up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CIN:13608</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1998-02-12</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Chinese</td>\n",
+       "      <td>387393</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>23</td>\n",
+       "      <td>HH1_lt40</td>\n",
+       "      <td>FS2_20to40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   secuityno cltsex     cltdob marryd race_desc_map cltpcode household_size  \\\n",
+       "0  CIN:14264      F 1993-02-17      M       Chinese   545686              1   \n",
+       "1   CIN:7188      F 1977-06-15      M       Chinese   308364             72   \n",
+       "2  CIN:13608      F 1998-02-12      S       Chinese   387393             28   \n",
+       "\n",
+       "  economic_status family_size household_size_grp family_size_grp  \n",
+       "0              76          56           HH1_lt40      FS3_40to60  \n",
+       "1              96          90         HH2_40to80        FS5_80up  \n",
+       "2              93          23           HH1_lt40      FS2_20to40  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[\"client\"].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values per column in Client\n",
+      "4 for race_desc_map\n",
+      "['Chinese' 'Others' 'Indian' 'Malay']\n",
+      "------\n",
+      "6 for marryd\n",
+      "['M' 'S' 'D' 'U' 'W' 'P']\n",
+      "------\n",
+      "6 for household_size_grp\n",
+      "['HH1_lt40' 'HH2_40to80' 'HH3_80to100' 'HH4_100to120' 'HH5_120up'\n",
+      " 'HH0_missing']\n",
+      "------\n",
+      "6 for family_size_grp\n",
+      "['FS3_40to60' 'FS5_80up' 'FS2_20to40' 'FS4_60to80' 'FS1_lt20'\n",
+      " 'FS0_missing']\n",
+      "------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Unique values per df\n",
+    "#Client \n",
+    "print(\"Unique values per column in Client\")\n",
+    "for col in [\"race_desc_map\",\"marryd\",\"household_size_grp\",\"family_size_grp\"]:\n",
+    "    print(len(dfs[\"client\"][col].unique()), f\"for {col}\")\n",
+    "    print(dfs[\"client\"][col].unique())\n",
+    "    print(\"-\"*6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'HH1_lt40'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Correlation between discretised and non-\" for client\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m correlation_matrix \u001b[38;5;241m=\u001b[39m \u001b[43mdfs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclient\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcorr\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m6\u001b[39m))\n\u001b[1;32m      4\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(correlation_matrix, annot\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoolwarm\u001b[39m\u001b[38;5;124m\"\u001b[39m,fmt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/frame.py:11049\u001b[0m, in \u001b[0;36mDataFrame.corr\u001b[0;34m(self, method, min_periods, numeric_only)\u001b[0m\n\u001b[1;32m  11047\u001b[0m cols \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[1;32m  11048\u001b[0m idx \u001b[38;5;241m=\u001b[39m cols\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m> 11049\u001b[0m mat \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnan\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m  11051\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpearson\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m  11052\u001b[0m     correl \u001b[38;5;241m=\u001b[39m libalgos\u001b[38;5;241m.\u001b[39mnancorr(mat, minp\u001b[38;5;241m=\u001b[39mmin_periods)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/frame.py:1993\u001b[0m, in \u001b[0;36mDataFrame.to_numpy\u001b[0;34m(self, dtype, copy, na_value)\u001b[0m\n\u001b[1;32m   1991\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1992\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdtype(dtype)\n\u001b[0;32m-> 1993\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mgr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mas_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mna_value\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1994\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m dtype:\n\u001b[1;32m   1995\u001b[0m     result \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(result, dtype\u001b[38;5;241m=\u001b[39mdtype)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/internals/managers.py:1688\u001b[0m, in \u001b[0;36mBlockManager.as_array\u001b[0;34m(self, dtype, copy, na_value)\u001b[0m\n\u001b[1;32m   1686\u001b[0m     arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(blk\u001b[38;5;241m.\u001b[39mvalues, dtype\u001b[38;5;241m=\u001b[39mdtype)\n\u001b[1;32m   1687\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1688\u001b[0m     arr \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mblk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1690\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m using_copy_on_write() \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m copy:\n\u001b[1;32m   1691\u001b[0m     arr \u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mview()\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'HH1_lt40'"
+     ]
+    }
+   ],
+   "source": [
+    "#Correlation between discretised and non-\" for client\n",
+    "dfs[\"client_encode_test\"] = dfs[\"client\"].copy()\n",
+    "encoder = LabelEncoder\n",
+    "correlation_matrix = dfs[\"client\"].iloc[:,6:].corr()\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.heatmap(correlation_matrix, annot=True,cmap=\"coolwarm\",fmt = \".2f\")\n",
+    "plt.title(\"Correlation Matrix within client\")\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
