--- a/Big_Tree_FinalFinal.ipynb
+++ b/Big_Tree_FinalFinal.ipynb
@@ -4244,6 +4244,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Random Forest prior to new encoding: \n",
+    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "# from sklearn.metrics import accuracy_score, classification_report\n",
+    "# # Initialize Random Forest Classifier\n",
+    "# rf_model = RandomForestClassifier(\n",
+    "#     n_estimators=100,  \n",
+    "#     max_depth=20,    \n",
+    "#     random_state=42,\n",
+    "#     n_jobs=-1  \n",
+    "# )\n",
+    "\n",
+    "# # Train the model on undersampled data\n",
+    "# rf_model.fit(X_train_resampled, y_train_resampled)\n",
+    "# # Predict on test set\n",
+    "# y_pred = rf_model.predict(X_test)\n",
+    "\n",
+    "# # Print accuracy\n",
+    "# accuracy = accuracy_score(y_test, y_pred)\n",
+    "# print(f\"Random Forest Accuracy: {accuracy:.4f}\")\n",
+    "\n",
+    "# # Print classification report\n",
+    "# print(\"\\nClassification Report:\")\n",
+    "# print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest Accuracy: 0.5488\n",
+    "Classification Report\n",
+    "<table>\n",
+    "<thead>\n",
+    "<td></td><td>precision</td><td>recall</td><td>f1-score</td><td>support</td>\n",
+    "</th>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "<td>accuracy</td><td></td><td></td><td>0.55</td><td>5794</td>\n",
+    "</tr>\n",
+    "<tr><td>macro avg</td><td>0.4</td><td>0.42</td><td>0.41</td><td>5794</td></tr>\n",
+    "<tr><td>weighted avg</td><td>0.52</td><td>0.55</td><td>0.53</td><td>5794</td>\n",
+    "</tbody>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
    "outputs": [
